# nhl-edge

./: LICENSE  README.md
edge-nhl/: pyproject.toml
edge-nhl/edge_nhl/: __init__.py  client.py  data_models.py  parsers.py  selenium_cookie.py
edge-nhl/examples/: file_bundler.py  parsed_output.json  sample_usage.py
edge-nhl/tests/: test_client.py  test_parsers.py
