[tool.poetry]
name = "edge-nhl"
version = "0.1.0"
description = "A Python library for fetching and parsing NHL Edge stats."
authors = ["Harris Gordon <hirememorey@gmail.com>"]
license = "MIT"

[[tool.poetry.packages]]
include = "edge_nhl"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.8"
requests = "^2.31"
beautifulsoup4 = "^4.12.2"
selenium = "^4.10.0"
lxml = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.20.3"
ruff = "^0.0.282"
black = "^23.1.0"

[tool.poetry.group.dev.dependencies]
webdriver-manager = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
